frontend/frontend_deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: frontend-server
  labels:
    app: frontend-server

spec:
  selector:
    matchLabels:
      app: frontend-server
  template:
    metadata:
      labels:
        app: frontend-server
    spec:
      containers:
        - name: frontend-server
          image: 'frontend-server:v1'

---
apiVersion: v1

kind: Service
metadata:
  name: frontend-server
  labels:
    app: frontend-server

spec:
  ports:
    - port: 8080
  selector:
    app: frontend-server
